--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             I enjoy problem-solving and learning new things. I'm currently working at 
             <a href="https://ramp.com">Ramp</a> as a Software Engineer Intern.
           </p>
+          <p>
+            In my free time, I enjoy watching sports, stand-up comedy and reading!
+          </p>
+          <p>
+            You can find me on <a href="https://linkedin.com/in/karthikb19">LinkedIn</a>, <a href="https://github.com/karthikb19">GitHub</a> and <a href="https://x.com/babyelephant197">X</a>.
+          </p>
         </section>
       </main>
     </div>
